# itn

./: .gitignore  .roomodes  ANIME_PROMPT.md  ARCHITECTURE.md  CHANGELOG.md  DOC_UPDATES.md  HLD.md  IMPLEMENTATION.md  LICENSE  LLD.md  README.md  RUST_WASM_RESEARCH.md  STATUS.md  TESTS.md  biome.json  index.html  package-lock.json  package.json  react-index.html  repomix-output.xml  tailwind.config.cjs  tasks-and-subtasks.txt  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
assets/: index-B3w6Vsyo.css  index-iMfR1qJJ.js
context/: ARCHITECTURE.md  HLD.md  IMPLEMENTATION.md  LLD.md  TESTS.md  backup.html  bkataru-neutrino-oscillation-js.txt  bkataru-nufast.txt  gemini.txt  grok.txt  itn.html  jenil-chota.txt  neutrino-oscillation.html  peterdenton-nufast.txt  prompt.md  task.ts.txt
context/dump/: alpinejs-alpine.txt
crates/nufast-wasm/: .gitignore  Cargo.toml
crates/nufast-wasm/src/: lib.rs
docs/: chatgpt.txt  task.txt
dump/: juliangarnier-anime.txt
imagining-neutrino-react/: package-lock.json  package.json  tsconfig.json  vite.config.ts
memory-bank/: activeContext.md  decisionLog.md  migration-log.md  productContext.md  progress.md  refactor-log.md  systemPatterns.md
public/wasm/: nufast_wasm.js  (+1 more)
scripts/: build-wasm.sh  lint-math.ts
src/: App.css  App.tsx  index.css  main.ts  style.css  tooltips.html
tmp/: click-test.html  test-react.html  test.html
wasm/: nufast_wasm.d.ts  nufast_wasm_bg.wasm  nufast_wasm_bg.wasm.d.ts
(+125 files in other folders)
