[package]
name = "nufast-wasm"
version = "0.2.0"
edition = "2021"
authors = ["Baalateja Kataru"]
description = "WebAssembly bindings for nufast neutrino oscillation physics"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

# Published on crates.io
nufast = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
